-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.0, 5.0.0
-
None
A regression was introduced in commmit 8d762c9caea4f8b9ff589b6c23564f4e37242745. The bug is pretty obvious, the same call to shouldDrawCachedGlyphs() replaces two contradicting tests. First patch fixes that.
The second patch fixes a bug introduced in f4c1c2f939e1cd6e08197284edb84b202cd6749e. I think the test to know if the glyph cache is to be used is wrong. It should only be used when the font scaling is not excessive, if I understand correctly.
| For Gerrit Dashboard: QTBUG-24453 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 36107,1 | Fixed text drawing in OpenGL 2 paint engine. | master | qt/qtbase | Status: MERGED | +2 | 0 |
| 36213,1 | Fixed text drawing in OpenGL 2 paint engine. | 4.8 | qt/qt | Status: MERGED | +2 | 0 |